[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysleigh"
version = "0.1.0"
description = "A Python assistant for the Advent of Code"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Dheebz", email = "148539956+Dheebz@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "toml",
    "pytest",
    "colorama",
    "requests",
    "typer[all]",
    "sqlalchemy",
    "markdownify",
    "platformdirs",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest-cov","mutmut", "commitizen", "cz-conventional-commits"]

[project.scripts]
pysleigh = "pysleigh.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pysleigh" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
#addopts = "--cov=src --cov-report=term-missing --cov-fail-under=95 -vvv -ra"
addopts = "--cov=src --cov-report=term-missing -vvv -ra"

markers = [
    "slow: mark test as slow",
    "integration: mark test as integration",
    "unit: mark test as unit",
    "cli: mark test as cli",
    "aoc: mark test as aoc",
    "smoke: mark test as smoke",
    "regression: mark test as regression",
    "performance: mark test as performance",
    "ui: mark test as ui",
    "api: mark test as api",
    "database: mark test as database",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "I001", # Ignore all import-related errors
    "FIX002", # Ignore all fix-related errors
    "TD001", # Ignore all type-related errors
    "TD002", # Ignore all type-related errors
    "TD003", # Ignore all type-related errors
    "D212",
]

[tool.mypy]
mypy_path = "src"
python_version = "3.10"
strict = true
ignore_missing_imports = true
show_column_numbers = true
pretty = true
exclude = ["tests/", "scripts/"]


[tool.mutmut]
paths_to_mutate = ["src/"]
tests_dir = ["tests/"]
exclude = ["*/__init__.py"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
